# mc-search-skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md
.github/workflows/: claude-agent.yml  claude-review.yml
skills/mc-search/: CLAUDE.md  RELEASE-v4.0.md  RELEASE-v4.5.md  SKILL.md  clean-code-review-modpack.md  clean-code-review.md  doc-consistency-new.json  doc-consistency-v2.md  doc-consistency.json  doc-consistency.md  doc-reliability-review.md  pyproject.toml  quality-review.json  quality-review.md  refactor-plan.md  setup.sh
skills/mc-search/references/: command-design.md  command-v6-design.md  commands.md  errors.md  modrinth-api.md  platform-comparison.md  result-schema.md  troubleshooting.md
skills/mc-search/scripts/: __init__.py  cli.py  core.py
skills/mcmod-info/: SKILL.md  doc-consistency.json  doc-consistency.md  pyproject.toml
skills/mcmod-info/references/: mcmod-api.md  modrinth-api.md  result-schema.md  troubleshooting.md
skills/mcmod-info/scripts/: __init__.py  cli.py  core.py
