[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mc-search"
version = "4.0.0"
description = "Minecraft 聚合搜索工具（模组/物品/原版内容，四平台并行）"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "mc-search contributors"}
]
keywords = ["minecraft", "search", "modrinth", "mcmod", "wiki", "aggregate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games :: RPG",
    "Topic :: Games",
]

[project.scripts]
mc-search = "scripts.cli:main"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/mexiaosqwq/mc-search-skill"
Documentation = "https://github.com/mexiaosqwq/mc-search-skill#readme"
Repository = "https://github.com/mexiaosqwq/mc-search-skill"
Issues = "https://github.com/mexiaosqwq/mc-search-skill/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
