[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcmod-info"
version = "0.2.0"
description = "Minecraft 模组 + 游戏内容信息查询工具（三平台并行搜索）"
readme = "README.md"
license = {text = "CC0-1.0"}
requires-python = ">=3.8"
authors = [
    {name = "mcmod-info contributors"}
]
keywords = ["minecraft", "mod", "mcmod", "modrinth", "wiki", "skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: CC0 1.0 Universal (CC0 1.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games :: RPG",
    "Topic :: Games",
]

[project.scripts]
mcmod-search = "scripts.cli:main"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/mexiaosqwq/mcmod-info"
Documentation = "https://github.com/mexiaosqwq/mcmod-info#readme"
Repository = "https://github.com/mexiaosqwq/mcmod-info"
Issues = "https://github.com/mexiaosqwq/mcmod-info/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
